--- a/reactjs/src/App.css
+++ b/reactjs/src/App.css
@@ -1,3 +1,18 @@
+body {
+    background-color: rgb(231, 230, 244);
+    font-family: 'M PLUS Rounded 1c';
+}
+
+h2 {
+    color: rgb(64, 64, 64);
+    font-size: 27px;
+}
+
+h3 {
+    color: rgb(64, 64, 64);
+    font-size: 23px;
+}
+
 .App {
     height: 100vh;
 }
