--- a/reactjs/src/components/portfolio.css
+++ b/reactjs/src/components/portfolio.css
@@ -1,5 +1,8 @@
 .portfolio {
     height: 800px;
     width: 1100px;
-    border: 1px solid gray;
+    border-radius: 7px;
+    background-color: ghostwhite;
+    box-shadow: 0px 8px 16px 0px rgba(41, 41, 41, 0.04),
+        0px 0px 6px 0px rgba(41, 41, 41, 0.04);
 }
