--- a/reactjs/src/components/personal.css
+++ b/reactjs/src/components/personal.css
@@ -64,7 +64,7 @@
     border: 0.5px, solid, silver;
     box-shadow: 0px 8px 16px 0px rgba(41, 41, 41, 0.04),
         0px 0px 6px 0px rgba(41, 41, 41, 0.04);
-    border-radius: 14px;
+    border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -74,9 +74,12 @@
 .social-link-a {
     height: 40px;
     width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .link-img {
-    height: 40px;
-    width: 40px;
+    height: 42px;
+    width: 42px;
 }
