--- a/reactjs/src/components/portfolio.css
+++ b/reactjs/src/components/portfolio.css
@@ -1,6 +1,7 @@
 .portfolio {
-    height: 1900px;
+    height: 2000px;
     width: 1100px;
+    min-height: fit-content;
     padding-inline: 50px;
     border-radius: 7px;
     box-sizing: border-box;
