--- a/reactjs/src/components/project.css
+++ b/reactjs/src/components/project.css
@@ -3,9 +3,16 @@
     width: 450px;
     padding: 20px;
     border-radius: 7px;
-    border: 1px solid rgb(222, 222, 222);
+    /* border: 3px solid rgb(41, 41, 41); */
     box-shadow: 0px 8px 16px 0px rgba(41, 41, 41, 0.04),
         0px 0px 6px 0px rgba(41, 41, 41, 0.04);
+}
+
+.project-main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .project-buttons {
@@ -16,8 +23,7 @@
 .project-button {
     height: 40px;
     width: 120px;
-    border-radius: 20px;
-
+    border-radius: 10px;
     box-shadow: 0px 8px 16px 0px rgba(74, 74, 74, 0.04),
         0px 0px 6px 0px rgba(41, 41, 41, 0.04);
     font-family: monospace;
@@ -25,12 +31,13 @@
     font-size: 16px;
     font-weight: 600;
     margin: 5px;
-    color: rgb(235, 235, 235);
-    background-color: rgb(21, 21, 21);
+    color: whitesmoke;
+    background-color: rgb(41, 41, 41);
 }
 
 .project-button:hover {
     cursor: pointer;
+    background-color: rgb(95, 95, 95);
 }
 
 .project-button a {
