--- a/reactjs/src/components/skill.css
+++ b/reactjs/src/components/skill.css
@@ -8,12 +8,15 @@
 .skills-container {
     height: 410px;
     width: 420px;
-    display: inline-flex;
+    display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
+    align-content: start; /* чтобы были друг за другом*/
+    align-items: start;
+    justify-content: start;
+    overflow: scroll;
+    scrollbar-width: none;
     margin: 0;
+    gap: 5px;
     padding: 10px;
     background-color: ghostwhite;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.04),
@@ -26,6 +29,7 @@
     min-width: fit-content;
     min-height: fit-content;
     margin-right: 10px;
+    margin-bottom: 1px;
     text-align: center;
     font-size: 30px;
     border-radius: 10px;
