--- a/reactjs/src/components/personal.css
+++ b/reactjs/src/components/personal.css
@@ -6,7 +6,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    background-color: ghostwhite;
+    background-color: rgb(255, 255, 255);
     box-shadow: 0px 8px 16px 0px rgba(41, 41, 41, 0.04),
         0px 0px 6px 0px rgba(41, 41, 41, 0.04);
 }
