--- a/reactjs/src/components/portfolio.css
+++ b/reactjs/src/components/portfolio.css
@@ -1,11 +1,11 @@
 .portfolio {
-    height: 2000px;
+    /* height: 2000px; */
     width: 1100px;
     min-height: fit-content;
     padding-inline: 50px;
     border-radius: 7px;
     box-sizing: border-box;
-    background-color: ghostwhite;
+    background-color: rgb(255, 255, 255);
     box-shadow: 0px 8px 16px 0px rgba(41, 41, 41, 0.04),
         0px 0px 6px 0px rgba(41, 41, 41, 0.04);
     display: flex;
