--- a/reactjs/src/components/skill.css
+++ b/reactjs/src/components/skill.css
@@ -6,7 +6,7 @@
     display: flex;
 }
 .skills-container {
-    height: 410px;
+    height: 400px;
     width: 420px;
     display: flex;
     flex-wrap: wrap;
@@ -17,33 +17,40 @@
     scrollbar-width: none;
     margin: 0;
     gap: 5px;
-    padding: 10px;
-    background-color: ghostwhite;
+    border: 1px solid rgb(240, 240, 240);
+    border-radius: 7px;
+    background-color: rgb(255, 255, 255);
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.04),
         0px 0px 6px 0px rgba(30, 19, 19, 0.04);
 }
 
 .skill-name {
-    height: 50px;
-    width: 60px;
+    height: 30px;
+    /* width: 50px; */
     min-width: fit-content;
     min-height: fit-content;
     margin-right: 10px;
+    margin-left: 10px;
     margin-bottom: 1px;
+    align-content: center;
     text-align: center;
-    font-size: 30px;
+    font-size: 18px;
+    font-weight: 600;
+    padding: 3px;
+    padding-left: 8px;
+    padding-right: 8px;
     border-radius: 10px;
-    background-color: rgb(41, 41, 41);
-    color: whitesmoke;
-    border: 1px solid black;
+    background-color: rgb(253, 253, 253);
+    color: rgb(64, 64, 64);
+    border: 1px solid rgb(64, 64, 64);
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.04),
         0px 0px 6px 0px rgba(30, 19, 19, 0.04);
 }
 
 .skills-map {
-    height: 410px;
+    height: 400px;
     width: 540px;
-    background-color: ghostwhite;
+    background-color: rgb(255, 255, 255);
     border-radius: 7px;
     border: 1px solid rgb(240, 240, 240);
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.04),
