--- a/reactjs/src/components/project.css
+++ b/reactjs/src/components/project.css
@@ -63,3 +63,9 @@
     font-weight: 700;
     white-space: nowrap;
 }
+
+.project-tags-holder span:hover {
+    background-color: rgb(64, 64, 64);
+    color: rgb(255, 255, 255);
+    border: 2px solid rgb(255, 255, 255);
+}
